<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.neo4j.examples</groupId>
	<artifactId>driver-native-lib</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>driver-native-lib</name>
	<description>Project compiling neo4j driver natively and using it as a shared library</description>

	<properties>
		<java.version>17</java.version>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.debug>true</maven.compiler.debug>
		<maven.compiler.parameters>true</maven.compiler.parameters>
		<maven.compiler.release>${java.version}</maven.compiler.release>
		<maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>

		<native.maven.plugin.version>0.9.20</native.maven.plugin.version>
		<neo4j-java-driver.version>5.6.0</neo4j-java-driver.version>
		<graalvm.version>22.3.1</graalvm.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.neo4j.driver</groupId>
			<artifactId>neo4j-java-driver</artifactId>
			<version>${neo4j-java-driver.version}</version>
		</dependency>

		<dependency>
			<groupId>org.graalvm.sdk</groupId>
			<artifactId>graal-sdk</artifactId>
			<version>${graalvm.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.graalvm.nativeimage</groupId>
			<artifactId>svm</artifactId>
			<version>${graalvm.version}</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>

			<plugin>
				<groupId>org.graalvm.buildtools</groupId>
				<artifactId>native-maven-plugin</artifactId>
				<version>${native.maven.plugin.version}</version>
				<extensions>true</extensions>
				<configuration>
					<requiredVersion>22.3</requiredVersion>
					<imageName>neo4j-migrations</imageName>
					<buildArgs>
						<arg>--no-fallback</arg>
						<arg>--shared</arg>
						<arg>-H:Name=libneo4j</arg>
						<arg>-H:CLibraryPath=${project.basedir}/src/main/c</arg>
						<arg>--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core.c=ALL-UNNAMED</arg>
					</buildArgs>
				</configuration>
				<executions>
					<execution>
						<id>create-native-image</id>
						<goals>
							<goal>compile-no-fork</goal>
						</goals>
						<phase>package</phase>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
			</plugin>
		</plugins>
	</build>
</project>
